log
Fri 21 Apr 2023 01:09:22 PM UTC: 
 treemap.c | 15 ++++++++++-----
 1 file changed, 10 insertions(+), 5 deletions(-)
 tests:  4|7
total_score: 5/70
11b9df2
Fri 21 Apr 2023 01:24:47 PM UTC: 
 treemap.c | 24 +++++++++++++++++++++++-
 1 file changed, 23 insertions(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:96:5: error: expected expression before ‘}’ token
   96 |     }
      |     ^
treemap.c:96:5: error: expected expression before ‘}’ token
Compilation failed
f15902b
Fri 21 Apr 2023 01:31:05 PM UTC: 
 treemap.c | 16 ++++++++++++++--
 1 file changed, 14 insertions(+), 2 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘minimum’:
treemap.c:59:13: error: expected ‘;’ before ‘}’ token
   59 |     return x
      |             ^
      |             ;
   60 |   }else{
      |   ~          
Compilation failed
cd977d1
Fri 21 Apr 2023 01:31:20 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  13|5
total_score: 15/70
cac6dfe
Fri 21 Apr 2023 01:35:50 PM UTC: 
 treemap.c | 12 +++++++++++-
 1 file changed, 11 insertions(+), 1 deletion(-)
 tests:  15|4
total_score: 20/70
e81eaf5
Sun 23 Apr 2023 02:18:53 AM UTC: 
 treemap.c | 16 ++++++++++++++++
 1 file changed, 16 insertions(+)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:53:13: error: unused variable ‘newSon’ [-Werror=unused-variable]
   53 |   TreeNode* newSon = NULL;
      |             ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
98c6c99
Sun 23 Apr 2023 02:19:40 AM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:53:13: error: variable ‘newSon’ set but not used [-Werror=unused-but-set-variable]
   53 |   TreeNode* newSon = NULL;
      |             ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
2763847
Sun 23 Apr 2023 02:21:18 AM UTC: 
 treemap.c | 17 ++++++++++++++++-
 1 file changed, 16 insertions(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:53:13: error: variable ‘newSon’ set but not used [-Werror=unused-but-set-variable]
   53 |   TreeNode* newSon = NULL;
      |             ^~~~~~
test.c: In function ‘removeNode’:
test.c:503:5: error: ‘main’ is normally a non-static function [-Werror=main]
  503 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:606:1: error: expected declaration or statement at end of input
  606 | }
      | ^
At top level:
test.c:503:5: error: ‘main’ defined but not used [-Werror=unused-function]
  503 | int main( int argc, char *argv[] ) {
      |     ^~~~
cc1: all warnings being treated as errors
Compilation failed
ea7aef3
Sun 23 Apr 2023 02:22:36 AM UTC: 
 treemap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:53:13: error: variable ‘newSon’ set but not used [-Werror=unused-but-set-variable]
   53 |   TreeNode* newSon = NULL;
      |             ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
b7c12ca
